@@ -1,3 +1,8 @@
+2004-07-19  Glynn Foster  <glynn.foster@sun.com>
+
+	* actions.c: Use g_spawn instead of exec. Patch
+	from James Strandboge and Shakti. Fixes #135869.
+
 2004-05-08  Glynn Foster  <glynn.foster@sun.com>
 
 	* log_repaint.c, zoom.c: Patch from Harsh Jaitly  
